# aj

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PROMPT.md  README.md  TODO-current.md  TODO.md
src/aj/: Cargo.toml  SYSTEM_PROMPT.md
src/aj-agent/: Cargo.toml
src/aj-agent/src/: bus.rs  conversation.rs  error.rs  events.rs  hooks.rs  legacy_tool.rs  lib.rs  message.rs  persistence.rs  projection.rs  queue.rs  tool.rs  types.rs
src/aj-conf/: Cargo.toml  SYSTEM_PROMPT.md
src/aj-conf/src/: env.rs  lib.rs  paths.rs  schema.rs  skills.rs
src/aj-models/: Cargo.toml
src/aj-models/data/: codex.json  models.json  overrides.json
src/aj-models/src/: anthropic.rs  auth.rs  cancel.rs  compat.rs  conversation.rs  errors.rs  lib.rs  messages.rs  oauth.rs  openai.rs  openai_ng.rs  partial_json.rs  provider.rs  refresh.rs  registry.rs  scripted.rs  streaming.rs  tools.rs  transform.rs  types.rs  usage.rs  wire.rs
src/aj-models/src/anthropic/: legacy.rs  provider.rs
src/aj-models/src/oauth/: anthropic.rs  callback.rs  openai.rs  page.rs  paste.rs  pkce.rs  test_support.rs  token.rs
src/aj-models/src/openai/: codex.rs  errors.rs  legacy.rs  provider.rs  responses.rs
src/aj-models/src/scripted/: demos.rs  provider.rs
src/aj-models/src/scripted/provider/: demos.rs
src/aj-models/tests/: openrouter_live.rs  roundtrip.rs  thinking_replay_live.rs
src/aj-models/tests/roundtrip/: anthropic.rs  common.rs  cross_provider.rs  openai_codex_responses.rs  openai_completions.rs  openai_responses.rs
src/aj-models/tests/roundtrip/fixtures/anthropic-messages/: error_frame.sse  (+10 more)
src/aj-next/: Cargo.toml
src/aj-next/src/: cli.rs  lib.rs  main.rs  modes.rs  persistence.rs
src/aj-next/src/cli/: args.rs  file_args.rs
src/aj-next/src/config/: keybindings.rs  slash_commands.rs  theme.rs
src/aj-next/src/config/theme/: dark.json  light.json
src/aj-next/src/modes/: interactive.rs  print.rs
src/aj-next/src/modes/interactive/: editor_ext.rs  event_pump.rs  keys.rs  layout.rs  shutdown.rs
src/aj-session/: Cargo.toml
src/aj-session/src/: compaction.rs  lib.rs  listener.rs  log.rs  migrate.rs  persistence.rs  repair.rs  replay.rs  stats.rs
src/aj-tools/: Cargo.toml
src/aj-tools/src/: bridge.rs  image.rs  lib.rs  sanitize.rs  testing.rs  tools.rs  truncate.rs  util.rs
src/aj-tools/src/tools/: agent.rs  bash.rs  edit_file.rs  edit_file_multi.rs  glob.rs  grep.rs  ls.rs  read_file.rs  task.rs  todo.rs  write_file.rs
src/aj-tui/: Cargo.toml  PORTING.md  PORTING_TRACKER.md  README.md
src/aj-tui/examples/: PARITY.md  chat_simple.rs  key_tester.rs  settings_demo.rs  viewport_overwrite_repro.rs
src/aj-tui/src/: ansi.rs  autocomplete.rs  capabilities.rs  component.rs  components.rs  container.rs  editor_component.rs  fuzzy.rs  image_protocol.rs  keybindings.rs  keys.rs  kill_ring.rs  lib.rs  style.rs  terminal.rs  tmux.rs  tui.rs  undo_stack.rs  word_boundary.rs  word_wrap.rs
src/aj-tui/src/components/: cancellable_loader.rs  editor.rs  filterable_select.rs  image.rs  loader.rs  markdown.rs  overlay_window.rs  select_list.rs  settings_list.rs  spacer.rs  text.rs  text_box.rs  text_input.rs  truncated_text.rs
src/aj-tui/tests/: async_tui.rs  autocomplete.rs  autocomplete_session.rs  cancellable_loader.rs  capabilities.rs  component_wants_key_release.rs  editor_accessors.rs  editor_autocomplete.rs  editor_backslash_enter.rs  editor_border.rs  editor_character_jump.rs  editor_cursor_reset.rs  editor_grapheme_wrap.rs  editor_history.rs  editor_kill_ring.rs  editor_kitty_csiu.rs  editor_max_visible_lines.rs  editor_newline_fallback.rs  editor_page_scroll.rs  editor_paste_marker.rs  editor_row_padding.rs  editor_shift_delete.rs  editor_sticky_column.rs  editor_undo.rs  editor_unicode.rs  editor_word_wrap.rs  fuzzy.rs  image_rendering.rs  input_listeners.rs  keybindings.rs  keybindings_user_overrides.rs  keys.rs  kill_ring.rs  loader.rs  markdown.rs  on_debug.rs  overlay_image_bypass.rs  overlay_non_capturing.rs  overlay_options.rs  overlay_short_content.rs  (+25 more)
src/aj-tui/tests/support/: README.md  async_tui.rs  fixtures.rs  logging_terminal.rs  themes.rs  virtual_terminal.rs
src/aj/assets/export/: smoke_test.mjs  template.css  template.html  template.js
src/aj/src/: auth.rs  cli.rs  cli_common.rs  cli_sub_agent.rs  clipboard.rs  compaction.rs  config.rs  event_bridge.rs  export.rs  lib.rs  main.rs  model.rs  modes.rs  persistence.rs  prompt_history.rs  scripted.rs  session_setup.rs  system_prompt.rs  tmux_notice.rs  turn.rs  ui_cli.rs  usage.rs
src/aj/src/cli/: args.rs  file_args.rs  sub_agent_cli.rs
src/aj/src/config/: commands.rs  keybindings.rs  slash_commands.rs  theme.rs
src/aj/src/config/theme/: dark.json  light.json
src/aj/src/modes/: interactive.rs  print.rs
src/aj/src/modes/interactive/: components.rs  editor_ext.rs  event_pump.rs  footer_data.rs  keys.rs  layout.rs  render_settings.rs  session.rs  shutdown.rs  test_support.rs
src/aj/tests/: replay_parity.rs
src/anthropic-sdk/: Cargo.toml
src/anthropic-sdk/examples/: thinking_signature_experiment.rs
src/anthropic-sdk/src/: client.rs  lib.rs  messages.rs  stealth.rs  streaming.rs  usage.rs
src/openai-sdk/: Cargo.toml
src/openai-sdk/src/: client.rs  lib.rs  types.rs
src/openai-sdk/src/types/: chat_completions.rs  common.rs  responses.rs
src/vaxis/: Cargo.toml
src/vaxis/src/: cell.rs  ctlseqs.rs  error.rs  event.rs  event_loop.rs  grapheme_cache.rs  gwidth.rs  image.rs  internal_screen.rs  key.rs  lib.rs  mouse.rs  parser.rs  queue.rs  screen.rs  tty.rs  unicode.rs  vaxis.rs  vxfw.rs  widgets.rs  window.rs
src/vaxis/src/event_loop/: async_reader.rs  input.rs
src/vaxis/src/tty/: posix.rs  test_backend.rs  windows.rs
src/vaxis/src/vxfw/: app.rs  border.rs  button.rs  center.rs  flex_column.rs  flex_row.rs  list_view.rs  padding.rs  rich_text.rs  scroll_bars.rs  scroll_view.rs  sized_box.rs  spinner.rs  split_view.rs  text.rs  text_field.rs
src/vaxis/src/widgets/: alignment.rs  code_view.rs  line_numbers.rs  scroll_view.rs  scrollbar.rs  text_input.rs  text_view.rs  view.rs
(+142 files in other folders)
