[workspace]
members = [
    "src/aj",
    "src/aj-agent",
    "src/aj-conf",
    "src/aj-tools",
    "src/anthropic-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anthropic-sdk = "0.1.5"
anyhow = "1.0"
async-stream = "0.3.6"
chrono = "0.4"
console = "0.15"
dotenv = "0.15.0"
eventsource-stream = "0.2"
futures = "0.3"
globset = "0.4"
grep = "0.3"
itertools = "0.14.0"
nu-ansi-term = "0.46"
regex = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
schemars = { version = "0.9.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.6"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "ansi"] }
walkdir = "2.5"

[workspace.lints.rust]
unknown_lints = "allow"
non_local_definitions = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bazel, stamped, coverage, nightly_doc_features, release, tokio_unstable)'] }

[workspace.lints.rustdoc]
unportable_markdown = "allow"

[workspace.lints.clippy]
style = { level = "allow", priority = -1 }
complexity = { level = "allow", priority = -1 }
large_enum_variant = { level = "allow", priority = 0 }
result_large_err = { level = "allow", priority = 0 }
mutable_key_type = { level = "allow", priority = 0 }
stable_sort_primitive = { level = "allow", priority = 0 }
map_entry = { level = "allow", priority = 0 }
box_default = { level = "allow", priority = 0 }
drain_collect = { level = "allow", priority = 0 }
bool_comparison = "warn"
clone_on_ref_ptr = "warn"
no_effect = "warn"
unnecessary_unwrap = "warn"
dbg_macro = "warn"
todo = "warn"
zero_prefixed_literal = "warn"
borrowed_box = "warn"
deref_addrof = "warn"
double_must_use = "warn"
double_parens = "warn"
extra_unused_lifetimes = "warn"
needless_borrow = "warn"
needless_question_mark = "warn"
needless_return = "warn"
redundant_pattern = "warn"
redundant_slicing = "warn"
redundant_static_lifetimes = "warn"
single_component_path_imports = "warn"
unnecessary_cast = "warn"
useless_asref = "warn"
useless_conversion = "warn"
builtin_type_shadow = "warn"
duplicate_underscore_argument = "warn"
double_negations = "warn"
unnecessary_mut_passed = "warn"
wildcard_in_or_patterns = "warn"
crosspointer_transmute = "warn"
excessive_precision = "warn"
panicking_overflow_checks = "warn"
as_conversions = "warn"
match_overlapping_arm = "warn"
zero_divided_by_zero = "warn"
must_use_unit = "warn"
suspicious_assignment_formatting = "warn"
suspicious_else_formatting = "warn"
suspicious_unary_op_formatting = "warn"
mut_mutex_lock = "warn"
print_literal = "warn"
same_item_push = "warn"
useless_format = "warn"
write_literal = "warn"
redundant_closure = "warn"
redundant_closure_call = "warn"
unnecessary_lazy_evaluations = "warn"
partialeq_ne_impl = "warn"
redundant_field_names = "warn"
transmutes_expressible_as_ptr_casts = "warn"
unused_async = "warn"
disallowed_methods = "warn"
disallowed_macros = "warn"
disallowed_types = "warn"
from_over_into = "warn"
mod_module_files = "warn"
needless_pass_by_ref_mut = "warn"
borrow_interior_mutable_const = "warn"
or_fun_call = "warn"
