[package]
name = "aj-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aj-conf = { path = "../aj-conf" }
aj-models = { path = "../aj-models" }
aj-tools = { path = "../aj-tools" }
aj-ui = { path = "../aj-ui" }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry2 = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
