[package]
name = "aj-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aj-conf = { path = "../aj-conf" }
aj-models = { path = "../aj-models" }
# `aj-ui` stays alive only for `TokenUsage` / `UserOutput` types
# carried on bus events; the trait `AjUi` is no longer touched here
# (per `docs/aj-next-plan.md` §2.4b). §2.6 absorbs these types into
# `aj-agent` and drops the dependency entirely.
aj-ui = { path = "../aj-ui" }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry2 = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
