[package]
name = "aj-agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
aj-models = { path = "../aj-models" }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry2 = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }

[lints]
workspace = true
