[package]
name = "aj-conf"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
