[package]
name = "aj-models"
version.workspace = true
edition.workspace = true

[dependencies]
anthropic-sdk = { path = "../anthropic-sdk" }
async-trait.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
openai-sdk = { path = "../openai-sdk" }
rand.workspace = true
regex = { workspace = true }
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true }
tracing.workspace = true

[dev-dependencies]
# Integration tests in `tests/roundtrip/` re-use the live SDK shapes
# directly so the round-trip fixtures stay in sync with the wire.
anthropic-sdk = { path = "../anthropic-sdk" }
serde_json.workspace = true

[lints]
workspace = true
