[package]
name = "aj-next"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "aj-next"
path = "src/main.rs"

[dependencies]
aj-agent = { path = "../aj-agent/" }
aj-conf = { path = "../aj-conf/" }
aj-models = { path = "../aj-models/" }
aj-session = { path = "../aj-session/" }
aj-tools = { path = "../aj-tools/" }
aj-tui = { path = "../aj-tui/" }
anyhow = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
