[package]
name = "aj-session"
version.workspace = true
edition.workspace = true

[dependencies]
aj-agent = { path = "../aj-agent" }
aj-models = { path = "../aj-models" }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
