[package]
name = "aj-tools"
version.workspace = true
edition.workspace = true

[dependencies]
aj-agent = { path = "../aj-agent/" }
aj-models = { path = "../aj-models/" }

anyhow = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
