[package]
name = "aj-tools"
version.workspace = true
edition.workspace = true

[features]
# Exposes the `testing` module (no-op `ToolContext` doubles) to downstream
# test code. Off by default so the doubles never ship in production builds.
# `tempfile` stays a normal dependency regardless: `tools::bash` uses it for
# the spill file on the live path.
testing = []

[dependencies]
aj-agent = { path = "../aj-agent/" }
aj-models = { path = "../aj-models/" }

base64 = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
