[package]
name = "aj-tui"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
ignore = { workspace = true }
memchr = { workspace = true }
nucleo = { workspace = true }
nucleo-matcher = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
aj-tui-testkit = { path = "../aj-tui-testkit/" }
nu-ansi-term = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
vt100-ctt = { workspace = true }

[lints]
workspace = true
