[package]
name = "aj"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "test_diff"
path = "src/bin/test_diff.rs"

[[bin]]
name = "test_markdown"
path = "src/bin/test_markdown.rs"


[dependencies]
aj-agent = { path = "../aj-agent/" }
aj-conf = { path = "../aj-conf/" }
aj-tools = { path = "../aj-tools/" }
aj-ui = { path = "../aj-ui/" }
anthropic-sdk = { path = "../anthropic-sdk/" }
anyhow = { workspace = true }
console = { workspace = true }
similar = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
termimad = "0.33.0"
rustyline = "16.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
