[package]
name = "aj"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "aj"
path = "src/main.rs"

[dependencies]
aj-agent = { path = "../aj-agent/" }
aj-conf = { path = "../aj-conf/" }
aj-models = { path = "../aj-models/" }
aj-session = { path = "../aj-session/" }
aj-tools = { path = "../aj-tools/" }
aj-tui = { path = "../aj-tui/" }
anyhow = { workspace = true }
arboard = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
image = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
