[package]
name = "anthropic-sdk"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
eventsource-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
