[package]
name = "vaxis"
version.workspace = true
edition.workspace = true

[dependencies]
vaxis-ucd = { path = "../vaxis-ucd" }
base64 = { workspace = true }
bitflags = { workspace = true }
compact_str = { workspace = true }
image = { workspace = true }
phf = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
signal-hook = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[lints]
workspace = true
